--- a/views/index.html
+++ b/views/index.html
@@ -20,11 +20,21 @@
             <p>
                 This is an API to a frontend application called <strong>Follow-up</strong>, the web app itself is a chat platform. It was created to offer 
                 a private room to a group to communicate. This is API is connected to it. Visit the web app at <a href="https://follow-up-com.web.app">https://follow-up-com.web.app</a>.
-            </p><br/>
+            </p><br/> 
             <p>
                 This is open source api, feel free to modify it.
-                Get Source at <a href="https://github.com/Imranyy/Follow-up-api.git" target="_blank" rel="noreferrer">https://github.com/Imranyy/Follow-up-api.git</a>.
+                Get Source at 
+                <a href="https://github.com/Imranyy/Follow-up-api.git" target="_blank" rel="noreferrer">
+                    https://github.com/Imranyy
+                    /Follow-up-api.git
+                </a>.
                 Fork or clone the repo, 
+            </p><br/>
+            <p>
+                Check my portfolio,
+                <a href="https://imran-matano.web.app" rel="noreferrer" target="_blank">
+                    https://imran-matano.web.app
+                </a>
             </p>
             
         </article>
@@ -113,6 +123,11 @@
             <ul>
                 <li><a href="https://wa.me/+254754423664" target="_blank" rel="noreferrer">Message Me On Whatsapp</a></li>
                 <li><a href="mailto:imranmat254@gmail.com" target="_blank" rel="noreferrer">Send Me Email</a></li>
+                <li>
+                    <a href="https://imran-matano.web.app" rel="noreferrer" target="_blank">
+                        My portfolio
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="other-links">
